# backend

./: .dockerignore  .dockleignore  .env.django  .env.global  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  conftest.py  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  license-whitelist-python.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  bandit.yml  delete-merged-branch-config.yml  dependabot.yml
.github/workflows/: autoblack.yml  code-quality-review.yml  code-quality.yml  license-check.yml  pytest.yml  release.yml  security.yml
Django/: .env.django  Dockerfile  manage.py  pyproject.toml
Django/api/: urls.py  views.py
Django/d_party/: settings.py
Django/streamer/: admin.py  consumers.py  factories.py  fields.py  format.py  mixins.py  models.py  tests.py  util.py
Django/streamer/management/commands/: cleanup.py
Django/web/: tests.py  urls.py  views.py
api/: tests.py  urls.py  views.py
d_party/: asgi.py  settings.py  urls.py
streamer/: admin.py  consumers.py  cron.py  factories.py  format.py  mixins.py  models.py  test_close_active_sessions.py  test_stats_folding.py  tests.py
streamer/management/commands/: close_active_sessions.py
streamer/migrations/: 0001_initial.py  0002_animeroom_title.py  0003_animeuser_user_icon.py  0004_reactionstat.py  0005_setting.py
web/: tests.py  views.py
web/templates/: 404.html  chart.html  layout.html
