[project]
name = "d-party-backend"
version = "1.0.0"
description = "d-party backend — Django Channels powered watch-together service for dアニメストア"
authors = [{ name = "U-Not", email = "euno.eng@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.0",
    "channels>=4.2",
    "channels-redis>=4.2,<4.3",
    "redis>=5,<6",
    "daphne>=4.1",
    "djangorestframework>=3.15",
    "django-filter>=24.3",
    "djangochannelsrestframework>=1.2",
    "django-jazzmin>=3.0",
    "django-axes>=7.0",
    "django-prometheus>=2.3",
    "django-extensions>=3.2.3",
    "pydantic>=2.9",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "gunicorn>=23.0",
    "uvicorn[standard]>=0.34",
    "uvicorn-worker>=0.3",
    "python-dotenv>=1.0",
    "cryptography>=44.0",
    "packaging>=24.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "ruff>=0.8",
    "django-debug-toolbar>=4.4",
    "werkzeug>=3.1",
    "pip-licenses>=5.0",
    "pipdeptree>=2.23",
]

[tool.uv]
# This project is a deployable application, not a distributable package.
package = false

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "C4"]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # function calls in argument defaults are idiomatic in Django/DRF
    "DJ008",  # __str__ on every model is optional here
]

[tool.ruff.lint.per-file-ignores]
# The Channels ASGI entrypoint must initialise Django before importing routing.
"d_party/asgi.py" = ["E402"]
# Pre-existing test-only smells we intentionally leave untouched.
"**/tests.py" = ["E711", "E721", "E722", "F811", "F841"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "d_party.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
